--- a/Layouts/XF/FacebookUI/FacebookUI/FacebookUI/App.xaml
+++ b/Layouts/XF/FacebookUI/FacebookUI/FacebookUI/App.xaml
@@ -3,6 +3,91 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FacebookUI.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <Style x:Key="StyleProfileDesceding" TargetType="Label">
+                <Setter Property="Margin" Value="20,0" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+                <Setter Property="TextColor" Value="#6e747d" />
+            </Style>
 
+            <Style x:Key="StyleLabel" TargetType="Label">
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="FontSize" Value="Micro" />
+            </Style>
+
+            <Style x:Key="StylePhotoRollImage" TargetType="Image">
+                <Setter Property="Aspect" Value="Fill" />
+                <Setter Property="WidthRequest" Value="120" />
+                <Setter Property="HeightRequest" Value="120" />
+            </Style>
+
+            <Style x:Key="StylePhotoRollEditInfo" TargetType="Label">
+                <Setter Property="Margin" Value="0,10" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="BackgroundColor" Value="#e6f1ff" />
+                <Setter Property="TextColor" Value="#1777f2" />
+            </Style>
+
+            <Style x:Key="StyleLine" TargetType="BoxView">
+                <Setter Property="HeightRequest" Value="1" />
+                <Setter Property="Color" Value="#DED9CF" />
+                <Setter Property="Margin" Value="0,15" />
+            </Style>
+
+            <Style x:Key="StyleFriendsImage" TargetType="Image">
+                <Setter Property="Aspect" Value="Fill" />
+                <Setter Property="WidthRequest" Value="85" />
+                <Setter Property="HeightRequest" Value="90" />
+            </Style>
+
+            <Style x:Key="StyleFriendsDesceding" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+                <Setter Property="FontSize" Value="Micro" />
+            </Style>
+
+            <Style x:Key="StyleCommentActionButton" TargetType ="Button">
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="FontSize" Value="Micro" />
+            </Style>
+
+            <Style x:Key="StyleFriendLabel" TargetType="Label">
+                <Setter Property="HorizontalTextAlignment" Value="Start" />
+                <Setter Property="FontAttributes" Value="Bold" />
+            </Style>
+
+            <Style x:Key="StyleFriendSearch" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="EndAndExpand" />
+                <Setter Property="TextColor" Value="#1777f2" />
+            </Style>
+
+            <Style x:Key="StyleFriendQuantity" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="StartAndExpand" />
+                <Setter Property="Margin" Value="0,0,0,10" />
+            </Style>
+
+            <Style x:Key="StyleCommentActions" TargetType="StackLayout">
+                <Setter Property="Orientation" Value="Horizontal" />
+                <Setter Property="Margin" Value="0,6" />
+                <Setter Property="HorizontalOptions" Value="Start" />
+                <Setter Property="VerticalOptions" Value="CenterAndExpand" />
+            </Style>
+
+            <Style x:Key="StyleCommentMore" TargetType="Label">
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="FontSize" Value="Large" />
+                <Setter Property="TextColor" Value="Blue" />
+                <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="VerticalOptions" Value="Start "/>
+            </Style>
+
+            <Style x:Key="StyleCommentPicture" TargetType="Image">
+                <Setter Property="Aspect" Value="Fill" />
+                <Setter Property="HeightRequest" Value="280" />
+                <Setter Property="HorizontalOptions" Value="FillAndExpand "/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
