--- a/Layouts/XF/FacebookUI/FacebookUI/FacebookUI/Views/ProfileView.xaml
+++ b/Layouts/XF/FacebookUI/FacebookUI/FacebookUI/Views/ProfileView.xaml
@@ -1,12 +1,60 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FacebookUI.Views.ProfileView">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             xmlns:PanCake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:ffTrans="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:local="clr-namespace:FacebookUI.ViewModels"
+             x:Class="FacebookUI.Views.ProfileView"
+             Title="Marcos Aurelio">
+    
+    <ContentPage.BindingContext>
+        <local:ProfileViewModel />
+    </ContentPage.BindingContext>
+
+    <!--<ContentPage.Content>-->        
+        <ScrollView VerticalScrollBarVisibility="Never"
+                BackgroundColor="WhiteSmoke">
+            
+            <Grid RowSpacing="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <!--Header Image-->                
+                <PanCake:PancakeView Grid.Row="0"
+                                 CornerRadius="20,20,0,0"
+                                 IsClippedToBounds="True"
+                                 HorizontalOptions="FillAndExpand"
+                                 HeightRequest="200"
+                                 Margin="20,10,20,0">
+                <Image Source="SunflowersTL.jpg"
+                       Aspect="AspectFill" />
+            </PanCake:PancakeView>
+
+            <ff:CachedImage Grid.Row="0"
+                            Source="ProfileImage.jpg"
+                            HeightRequest="40"
+                            WidthRequest="40"
+                            TranslationY="90"
+                            BackgroundColor="Transparent"
+                            Margin="0,0,0,20">
+                <ff:CachedImage.Transformations>
+                    <ffTrans:CircleTransformation />
+                </ff:CachedImage.Transformations>
+            </ff:CachedImage>
+            </Grid>
+        </ScrollView>
+    <!--</ContentPage.Content>-->    
 </ContentPage>
