--- a/AppsAndroid/Organizze/app/src/main/res/layout/activity_cadastro.xml
+++ b/AppsAndroid/Organizze/app/src/main/res/layout/activity_cadastro.xml
@@ -45,7 +45,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimary"
         android:text="Cadastrar"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/tvTermosUso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
