--- a/AppsAndroid/Organizze/app/src/main/res/values/themes.xml
+++ b/AppsAndroid/Organizze/app/src/main/res/values/themes.xml
@@ -1,8 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Organizze" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Base.Theme.Organizze" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+<!--        <item name="android:statusBarColor">@color/colorPrimaryDark</item>-->
+<!--        <item name="android:windowTranslucentStatus">false</item>-->
+<!--        <item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
     </style>
 
     <style name="Theme.Organizze" parent="Base.Theme.Organizze" />
