--- a/AppsAndroid/Organizze/app/src/main/res/layout/activity_login.xml
+++ b/AppsAndroid/Organizze/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginEnd="158dp"
+        android:height="48dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
@@ -86,6 +87,7 @@
         android:background="@color/colorPrimary"
         android:text="Entrar"
         android:textColor="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/tvCriarConta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +100,12 @@
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:title="Organizze"
         app:titleTextColor="@android:color/white" />
 </androidx.constraintlayout.widget.ConstraintLayout>
