--- a/AppsAndroid/Organizze/app/src/main/res/layout/activity_cadastro.xml
+++ b/AppsAndroid/Organizze/app/src/main/res/layout/activity_cadastro.xml
@@ -99,4 +99,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNome" />
 
+    <ImageButton
+        android:id="@+id/btVoltar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:background="@android:color/transparent"
+        android:scaleType="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_seta_voltar_preto" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
