--- a/AppsAndroid/Organizze/app/src/main/res/values-night/themes.xml
+++ b/AppsAndroid/Organizze/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,12 @@
     <style name="Base.Theme.Organizze" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+        <!-- <item name="android:windowTranslucentStatus">false</item> -->
+        <!-- <item name="android:windowDrawsSystemBarBackgrounds">true</item> -->
     </style>
 </resources>
